# lenticular-printing

./: .gitignore  README.md  pyproject.toml
lenticular/: __init__.py  calibrate.py  cli.py  export.py  interlace.py  normalize.py  profile.py  screen_preview.py
profiles/lenses/: 50_24lpi.json
profiles/printers/: canon_pro100.json  generic.json
profiles/screens/: imac_5k_27.json
tests/images/: calibration_sheet.tif  interlaced_test.tif
